[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mri-actor-utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
keywords = []
authors = [{ name = "Patrick Sadil", email = "psadil1@jh.edu" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "tapipy==1.6.3",
  "ibis-framework[duckdb]==9.3.0",
  "pandas==2.2.2",
  "pydantic==2.8.2",
]


[tool.hatch.version]
path = "src/mri_actor_utils/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mri_actor_utils tests}"

[tool.uv]
dev-dependencies = [
    "datamodel-code-generator[http]>=0.25.9",
]
